--- a/.project
+++ b/.project
@@ -15,4 +15,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.jkiss.dbeaver.DBeaverNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/br/ufrpe/zoologico/gui/grafica/imagens/images.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Desktop/images.png</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
